fix: h1 issue on page landing
Tried to do this instead of removing the outline. Apparently "tabindex="-1" may be useful for elements that should not be navigated to directly using the Tab key, but need to have keyboard focus set to them. Examples include an off-screen modal window that should be focused when it comes into view, or a form submission error message that should be immediately focused when an errant form is submitted." I read that this was the standard use case.

--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -9,6 +9,10 @@ body {
   margin: 0;
 }
 
+h1[tabindex="-1"]:focus {
+  outline: none;
+}
+
 #root {
   min-height: 100vh;
 }
